Bug 179551 - Wrong behaviour on importing color schemes files
Summary: Wrong behaviour on importing color schemes files
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_colors (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Matthew Woehlke
URL:
Keywords:
: 179547 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-01-03 23:00 UTC by Dario Andres
Modified: 2009-02-22 22:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Proposed patch (1.79 KB, patch)
2009-01-03 23:34 UTC, Dario Andres
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dario Andres 2009-01-03 23:00:00 UTC
Version:           KDE: 4.1.87 (KDE 4.1.87 (KDE 4.2 >= 20090101))  kdelibs svn rev. 904849 / kdebase svn rev. 904849 (using Devel)
Compiler:          gcc 
OS:                Linux
Installed from:    Compiled sources

Here using:

Qt: 4.4.3 + qt-copy-patches-889120
KDE: 4.1.87 (KDE 4.1.87 (KDE 4.2 >= 20090101))
kdelibs svn rev. 904849 / kdebase svn rev. 904849
on ArchLinux x86_64 - Kernel 2.6.27.10

---

There is a wrong behaviour when importing color scheme files into Colors configuration in SystemSettings.

Steps to Reproduce

- Open SystemSetting
- Go to Appearance / Colors
- Import a color scheme from a File (a scheme that you don't actually have)
- Select the file and click OK
The color scheme is imported, and the new row highlighted in the color schemes list.
However , the apply button isn't activated. (bug 179547)

- Close SystemSettings (don't apply and keep using the same color scheme you were using)

- Open SystemSetting
- Go to Appearance / Colors
The color scheme imported in the last SS session is in the list.
- Import the color scheme using the same file as before.
A "Do you want to overwrite" dialog appears
- Select "Cancel" in the dialog

Now, the "Current" item is selected in the color scheme list, however, the preview shows the imported (and cancelled) color scheme, and the Apply button is activated. Clicking "Apply" will set the imported color scheme as the used scheme
Comment 1 Dario Andres 2009-01-03 23:34:39 UTC
Created attachment 29876 [details]
Proposed patch

I'm not really sure if the patch affects something else or if it's safe.
Comment 2 Dario Andres 2009-01-03 23:35:07 UTC
*** Bug 179547 has been marked as a duplicate of this bug. ***
Comment 3 Dario Andres 2009-02-22 22:24:05 UTC
SVN commit 930229 by darioandres:

Enable apply button on importing color scheme
Fix some wrong behaviour on cancelling an overwrite dialog on importing a color scheme
Added Q_UNUSED in some functions

BUG: 179551



 M  +45 -8     colorscm.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=930229
Comment 4 Dario Andres 2009-02-22 22:26:42 UTC
SVN commit 930232 by darioandres:

Backport to branch4.2 of:

SVN commit 930229 by darioandres:

Enable apply button on importing color scheme
Fix some wrong behaviour on cancelling an overwrite dialog on importing a color
scheme
Added Q_UNUSED in some functions

CCBUG: 179551



 M  +45 -8     colorscm.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=930232