Enable apply button on importing color scheme Fix some wrong behaviour on cancelling an overwrite dialog on importing a color scheme Added Q_UNUSED in some functions

BUG: 179551


svn path=/trunk/KDE/kdebase/workspace/; revision=930229